re PR middle-end/35099 (ICE in remove_unreachable_regions with -O -fopenmp)

PR middle-end/35099
	* tree-cfg.c (new_label_mapper): Update cfun->last_label_uid.

	* g++.dg/gomp/pr35099.C: New test.

From-SVN: r133088